--- a/style.css
+++ b/style.css
@@ -54,12 +54,12 @@ header h2 {
 }
 
 .logo {
-    height: auto; /* Adjust this value to make logos bigger or smaller */
-    width: 100%;
+    height: 90px; /* Adjust this value to make logos bigger or smaller */
+    width: auto;
     background-color: transparent;
-    
- max-width: 100%; 
+     /* Ensures transparent backgrounds work */
 }
+
 
 /* You might want to adjust the IEEE CS logo slightly */
 .logo[alt="IEEE CS Logo"] {
@@ -191,4 +191,5 @@ footer {
     background-color: var(--text-dark);
     color: var(--text-light);
     margin-top: 2rem;
+
 }
